# SkyEye_cpp_service

./: .gitignore  CMakeLists.txt  CMakePresets.json
client/: index.html
docs/: webrtc_problems.md
enc_temp_folder/e5b466f26b320df43215ec7ee68975d/: H264Encoder.cpp
feature/: actionformer.cpp  actionformer.hpp  feature.cpp  feature.hpp  tridet.cpp  tridet.hpp
i3d/: deployment_guide.md  export_onnx.py  extract_features.py  implementation_plan.md  precess_all_frames.py  task.md  特征提取使用方法.docx
service/: config.hpp  entry.cpp  httplib.h  hybrid_video_queue.hpp  json.hpp  service.cpp  service.hpp  thread_safe_dict.hpp  thread_safe_queue.hpp
test/: test_extractFeatures.cpp  test_rtspPlay.cpp  test_yolo.cpp
utils/: H264Encoder.cpp  H264Encoder.hpp  WebServerUtils.cpp  WebServerUtils.hpp
yolo/: yolo_detector.cpp  yolo_detector.hpp
yolo/config/: xplane.yaml
